fix(homepage): add whitespace and center styles

--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -2,6 +2,30 @@ body {
   font-family: 'Courier New', Courier, monospace;
 }
 
+.container {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+
+.cards-container {
+  display: flex;
+  justify-content: center;
+  gap: 52px;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-basis: 200px;
+}
+
+.text {
+  text-align: center;
+  /* flex-wrap: wrap; */
+}
+
 img {
   width: 100px;
   height: 100px;
